--- a/examples/simple-network/CMakeLists.txt
+++ b/examples/simple-network/CMakeLists.txt
@@ -5,3 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable("${PROJECT_NAME}" main.cpp)
 target_link_libraries("${PROJECT_NAME}" PRIVATE KNP::BaseFramework::Core)
+
+install(TARGETS "${PROJECT_NAME}"
+        DESTINATION "${CMAKE_INSTALL_BINDIR}"
+        COMPONENT "knp-examples")
