--- a/knp/CMakeLists.txt
+++ b/knp/CMakeLists.txt
@@ -7,7 +7,9 @@ set(CMAKE_COMPILE_WARNING_AS_ERROR ON)
 # Need for the linters.
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-project(knp VERSION "${KNP_VERSION}" LANGUAGES C CXX)
+project(knp VERSION "${KNP_VERSION}" LANGUAGES C CXX
+        DESCRIPTION "Kaspersky Neuromorphic Platform"
+        HOMEPAGE_URL "https://neuro.kaspersky.ru/neyromorfnye-tekhnologii/")
 
 # TODO: Enable for the latest Boost versions: it doesn't work for DLLs on the old versions.
 # set(Boost_USE_STATIC_LIBS ON)
@@ -23,3 +25,69 @@ add_subdirectory(base-framework)
 add_subdirectory(python-framework)
 add_subdirectory(autodoc)
 add_subdirectory(tests)
+
+#message(FATAL_ERROR "${CMAKE_PROJECT_VERSION_MAJOR} - ${PROJECT_VERSION_MINOR}")
+#
+# Packaging.
+#
+
+set(CPACK_PACKAGE_CONTACT "Artiom N. <>")
+set(CPACK_PACKAGE_NAME    "${PROJECT_NAME}")
+set(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "${CMAKE_PROJECT_DESCRIPTION}")
+set(CPACK_PACKAGE_DESCRIPTION "\
+    Kaspersky Neuromorphic Platform is a spiking networks simulator\n\
+    Core library for development.")
+#set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
+
+set(CPACK_PACKAGE_INSTALL_DIRECTORY "${CPACK_PACKAGE_NAME}")
+#SET(CPACK_OUTPUT_FILE_PREFIX "${CMAKE_CURRENT_BINARY_DIR}/packages")
+
+set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE.txt")
+
+set(CPACK_PACKAGE_INSTALL_DIRECTORY ${CMAKE_INSTALL_PREFIX})
+set(CPACK_INSTALL_DEFAULT_DIRECTORY_PERMISSIONS
+    OWNER_READ OWNER_WRITE OWNER_EXECUTE
+    GROUP_READ GROUP_EXECUTE
+    WORLD_READ WORLD_EXECUTE)
+
+set(CPACK_DEBIAN_ENABLE_COMPONENT_DEPENDS ON)
+
+
+#
+# Deb package.
+#
+
+set(CPACK_DEB_PACKAGE_COMPONENT ON)
+set(CPACK_DEB_COMPONENT_INSTALL ON)
+
+set(CPACK_DEBIAN_PACKAGE_DESCRIPTION "${CPACK_PACKAGE_DESCRIPTION}")
+
+set(CPACK_DEBIAN_PACKAGE_SECTION "science")
+
+set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")
+set(CPACK_DEBIAN_PACKAGE_DEPENDS "libboost-all-dev (>= ${KNP_BOOST_MIN_VERSION}),")
+
+#set(CPACK_DEBIAN_PACKAGE_NAME ${PROJECT_NAME}-dev)
+#set(CPACK_DEBIAN_FILE_NAME "${PROJECT_NAME}-dev_${PROJECT_VERSION}_${CPACK_DEBIAN_PACKAGE_ARCHITECTURE}.deb")
+
+set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Artiom N.")
+set(CPACK_DEBIAN_PACKAGE_RECOMMENDS "cppzmq-dev (>= 4.9.0-1) , cppzmq (4.9.0-1)")
+
+set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
+set(CPACK_DEBIAN_PACKAGE_GENERATE_SHLIBS ON)
+
+
+#
+# RPM package.
+#
+
+set(CPACK_RPM_COMPONENT_INSTALL ON)
+set(CPACK_RPM_PACKAGE_RELOCATABLE  ON)
+set(CPACK_RPM_COMPONENT_INSTALL ON)
+
+set(CPACK_RPM_PACKAGE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE.txt")
+set(CPACK_RPM_PACKAGE_DESCRIPTION "${CPACK_PACKAGE_DESCRIPTION}")
+set(CPACK_RPM_PACKAGE_GROUP "science")
+
+include (CPack)
