--- a/knp/core-library/CMakeLists.txt
+++ b/knp/core-library/CMakeLists.txt
@@ -6,7 +6,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # Need for the linters.
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-project(knp-core VERSION "${KNP_VERSION}" LANGUAGES C CXX)
+project(knp-core VERSION "${KNP_VERSION}" LANGUAGES C CXX
+        DESCRIPTION "Kaspersky Neuromorphic Platform core"
+        HOMEPAGE_URL "https://neuro.kaspersky.ru/neyromorfnye-tekhnologii/")
 
 find_package(Boost ${KNP_BOOST_MIN_VERSION} REQUIRED)
 find_package(ZeroMQ REQUIRED)
@@ -68,8 +70,14 @@ knp_add_library("${PROJECT_NAME}"
     impl/subscription.cpp
 
     ${${PROJECT_NAME}_headers}
-    )
-add_library(KNP::Core ALIAS "${PROJECT_NAME}")
+
+    LINK_PRIVATE
+        spdlog::spdlog_header_only zmq flatbuffers "${PROJECT_NAME}_messaging"
+    LINK_PUBLIC
+        # This is using in the library for message parameters.
+        KNP::Neuron::Traits KNP::Synapse::Traits
+    ALIAS KNP::Core
+)
 
 source_group(source REGULAR_EXPRESSION "impl/.*")
 
@@ -77,10 +85,6 @@ target_include_directories("${PROJECT_NAME}" PRIVATE ${Boost_INCLUDE_DIRS} "impl
 
 # Flatbuffers headers must be generated before core compilation started.
 add_dependencies("${PROJECT_NAME}" "${PROJECT_NAME}_messaging")
-
-target_link_libraries("${PROJECT_NAME}" PRIVATE spdlog::spdlog_header_only zmq flatbuffers "${PROJECT_NAME}_messaging")
-# This is using in the library for message parameters.
-target_link_libraries("${PROJECT_NAME}" PUBLIC KNP::Neuron::Traits KNP::Synapse::Traits)
 
 # add_clang_tidy("${PROJECT_NAME}" CONFIG_FILE_PATH "${CMAKE_TIDY_CONFIG}" EXTRA_ARGS "--use-color")
 
@@ -106,86 +110,32 @@ configure_file(
 write_basic_package_version_file(
     "${CMAKE_CURRENT_BINARY_DIR}/cmake/${PROJECT_NAME}ConfigVersion.cmake"
     VERSION ${PROJECT_VERSION}
-    COMPATIBILITY AnyNewerVersion
-)
+    COMPATIBILITY AnyNewerVersion)
 
 configure_package_config_file(
     "${CMAKE_CURRENT_LIST_DIR}/cmake/${PROJECT_NAME}Config.cmake.in"
     "${CMAKE_CURRENT_BINARY_DIR}/cmake/${PROJECT_NAME}Config.cmake"
     INSTALL_DESTINATION
-    "${CMAKE_INSTALL_LIBDIR}/cmake/"
-)
+    "${CMAKE_INSTALL_LIBDIR}/cmake/")
 
 install(TARGETS "${PROJECT_NAME}"
-    EXPORT "${PROJECT_NAME}"
-    COMPONENT "${PROJECT_NAME}"
-    DESTINATION "${CMAKE_INSTALL_LIBDIR}/knp")
+        ARCHIVE
+        COMPONENT "framework-dev"
+#        DESTINATION "${CMAKE_INSTALL_LIBDIR}/knp"
+        )
 
-install(
-    FILES
-        ${${PROJECT_NAME}_headers}
-        "${CMAKE_CURRENT_BINARY_DIR}/include/${${PROJECT_NAME}_PUBLIC_INCLUDE_DIR}/version.h"
-    DESTINATION "include/${${PROJECT_NAME}_PUBLIC_INCLUDE_DIR}")
+install(DIRECTORY "include/${${PROJECT_NAME}_PUBLIC_INCLUDE_DIR}"
+        COMPONENT "framework-dev"
+        DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/knp"
+        FILES_MATCHING PATTERN "*.h")
 
 install(FILES
-    "${CMAKE_CURRENT_BINARY_DIR}/cmake/${PROJECT_NAME}Config.cmake"
-    "${CMAKE_CURRENT_BINARY_DIR}/cmake/${PROJECT_NAME}ConfigVersion.cmake"
-    DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}"
-)
+        "${CMAKE_CURRENT_BINARY_DIR}/include/${${PROJECT_NAME}_PUBLIC_INCLUDE_DIR}/version.h"
+        COMPONENT "framework-dev"
+        DESTINATION "include/${${PROJECT_NAME}_PUBLIC_INCLUDE_DIR}")
 
-
-#
-# Packaging.
-#
-
-set(CPACK_PACKAGE_CONTACT "Artiom N. <>")
-set(CPACK_PACKAGE_NAME    "${PROJECT_NAME}")
-set(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
-
-set(CPACK_PACKAGE_INSTALL_DIRECTORY "${CPACK_PACKAGE_NAME}")
-#SET(CPACK_OUTPUT_FILE_PREFIX "${CMAKE_CURRENT_BINARY_DIR}/packages")
-
-set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Kaspersky Neuromorphic Platform core")
-set(CPACK_PACKAGE_DESCRIPTION "\
-    Kaspersky Neuromorphic Platform is a spiking networks simulator\n\
-    Core library for development.")
-
-set(CPACK_DEBIAN_PACKAGE_DESCRIPTION "${CPACK_PACKAGE_DESCRIPTION}")
-
-set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE.txt")
-
-set(CPACK_PACKAGE_INSTALL_DIRECTORY ${CMAKE_INSTALL_PREFIX})
-set(CPACK_INSTALL_DEFAULT_DIRECTORY_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
-
-#
-# Deb package.
-#
-
-set(CPACK_DEBIAN_PACKAGE_SECTION "science")
-
-set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")
-set(CPACK_DEBIAN_PACKAGE_DEPENDS "libboost-all-dev (>= ${KNP_BOOST_MIN_VERSION}),")
-
-set(CPACK_DEBIAN_PACKAGE_NAME ${PROJECT_NAME}-dev)
-
-set(CPACK_DEBIAN_FILE_NAME "${PROJECT_NAME}-dev_${PROJECT_VERSION}_${CPACK_DEBIAN_PACKAGE_ARCHITECTURE}.deb")
-
-set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Artiom N.")
-set(CPACK_DEBIAN_PACKAGE_RECOMMENDS "cppzmq-dev (>= 4.9.0-1) , cppzmq (4.9.0-1)")
-
-set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
-set(CPACK_DEBIAN_PACKAGE_GENERATE_SHLIBS ON)
-
-set(CPACK_DEB_PACKAGE_COMPONENT ON)
-
-set(CPACK_DEB_COMPONENT_INSTALL ON)
-set(CPACK_RPM_COMPONENT_INSTALL ON)
-
-#
-# RPM package.
-#
-
-set(CPACK_RPM_PACKAGE_RELOCATABLE  ON)
-set(CPACK_RPM_PACKAGE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE.txt")
-
-include (CPack)
+install(FILES
+        "${CMAKE_CURRENT_BINARY_DIR}/cmake/${PROJECT_NAME}Config.cmake"
+        "${CMAKE_CURRENT_BINARY_DIR}/cmake/${PROJECT_NAME}ConfigVersion.cmake"
+        COMPONENT "framework-dev"
+        DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}")
