--- a/knp/backends/cpu/cpu-library/CMakeLists.txt
+++ b/knp/backends/cpu/cpu-library/CMakeLists.txt
@@ -9,7 +9,6 @@ project(knp-cpu-backends-library VERSION "${KNP_VERSION}" LANGUAGES C CXX)
 
 find_package(Boost ${KNP_BOOST_MIN_VERSION} REQUIRED)
 
-include(GNUInstallDirs)
 include(clang-tidy)
 include(knp-functions)
 
@@ -37,11 +36,5 @@ if(KNP_ENABLE_COVERAGE)
     link_target_with_gcov("${PROJECT_NAME}")
 endif()
 
-install(TARGETS "${PROJECT_NAME}"
-        EXPORT "${PROJECT_NAME}"
-#        NAMESPACE KNP::
-        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-        INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-)
+# Internal library, used by backends.
+# This doesn't need installation.
