--- a/knp/core-library/include/knp/core/version.h.in
+++ b/knp/core-library/include/knp/core/version.h.in
@@ -15,5 +15,13 @@
  */
 namespace knp::core
 {
-const std::string version = "@KNP_VERSION@";
+const uint16_t version_major = @CMAKE_PROJECT_VERSION_MAJOR@;
+const uint16_t version_minor = @CMAKE_PROJECT_VERSION_MINOR@;
+const uint16_t version_patch = @CMAKE_PROJECT_VERSION_PATCH@;
+
+
+/**
+ * @brief Version string.
+ */
+const std::string version = "@CMAKE_PROJECT_VERSION@";
 }  // namespace knp::core
