Documentation package fixed

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -10,7 +10,7 @@ install(DIRECTORY
 #        DESTINATION "${CMAKE_INSTALL_PREFIX}/share/doc/knp/html")
 
 file(READ "${CMAKE_CURRENT_SOURCE_DIR}/html/index.html" FILE_CONTENTS)
-string(REPLACE "../build/doc_doxygen/html/index.html" "doxygen/html/index.html" FILE_CONTENTS "${FILE_CONTENTS}")
+string(REPLACE "../build/doc_doxygen/html/index.html" "reference/index.html" FILE_CONTENTS "${FILE_CONTENTS}")
 file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/index.html" "${FILE_CONTENTS}")
 
 install(FILES
