--- a/knp/CMakeLists.txt
+++ b/knp/CMakeLists.txt
@@ -31,19 +31,32 @@ add_subdirectory(tests)
 # Packaging.
 #
 
-set(CPACK_PACKAGE_CONTACT "Artiom N. <>")
-set(CPACK_PACKAGE_NAME    "${PROJECT_NAME}")
+set(CPACK_PACKAGE_NAME "${PROJECT_NAME}" CACHE STRING "The resulting package name")
 set(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
-set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "${CMAKE_PROJECT_DESCRIPTION}")
+
+set(CPACK_PACKAGE_VERSION_MAJOR ${CMAKE_PROJECT_VERSION_MAJOR})
+set(CPACK_PACKAGE_VERSION_MINOR ${CMAKE_PROJECT_VERSION_MINOR})
+set(CPACK_PACKAGE_VERSION_PATCH ${CMAKE_PROJECT_VERSION_PATCH})
+
+set(CPACK_PACKAGE_VENDOR "Kaspersky Laboratory")
+
+set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Artiom N.")
+set(CPACK_PACKAGE_CONTACT "my@E-MAIL.net")
+
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "${CMAKE_PROJECT_DESCRIPTION}"
+    CACHE STRING "Package description for the package metadata")
 set(CPACK_PACKAGE_DESCRIPTION "\
     Kaspersky Neuromorphic Platform is a spiking networks simulator\n\
     Core library for development.")
-#set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
 
 set(CPACK_PACKAGE_INSTALL_DIRECTORY "${CPACK_PACKAGE_NAME}")
-#SET(CPACK_OUTPUT_FILE_PREFIX "${CMAKE_CURRENT_BINARY_DIR}/packages")
+SET(CPACK_OUTPUT_FILE_PREFIX "${CMAKE_BINARY_DIR}/_packages")
+
+# https://unix.stackexchange.com/a/11552/254512
+set(CPACK_PACKAGING_INSTALL_PREFIX "/usr")
 
 set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE.txt")
+set(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/README.md")
 
 set(CPACK_PACKAGE_INSTALL_DIRECTORY ${CMAKE_INSTALL_PREFIX})
 set(CPACK_INSTALL_DEFAULT_DIRECTORY_PERMISSIONS
@@ -51,6 +64,7 @@ set(CPACK_INSTALL_DEFAULT_DIRECTORY_PERMISSIONS
     GROUP_READ GROUP_EXECUTE
     WORLD_READ WORLD_EXECUTE)
 
+set(CPACK_COMPONENTS_GROUPING ONE_PER_GROUP)
 set(CPACK_DEBIAN_ENABLE_COMPONENT_DEPENDS ON)
 
 
@@ -70,8 +84,8 @@ set(CPACK_DEBIAN_PACKAGE_DEPENDS "libboost-all-dev (>= ${KNP_BOOST_MIN_VERSION})
 
 #set(CPACK_DEBIAN_PACKAGE_NAME ${PROJECT_NAME}-dev)
 #set(CPACK_DEBIAN_FILE_NAME "${PROJECT_NAME}-dev_${PROJECT_VERSION}_${CPACK_DEBIAN_PACKAGE_ARCHITECTURE}.deb")
+set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
 
-set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Artiom N.")
 set(CPACK_DEBIAN_PACKAGE_RECOMMENDS "cppzmq-dev (>= 4.9.0-1) , cppzmq (4.9.0-1)")
 
 set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
