--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.22) # TODO: increase to 3.25
+cmake_minimum_required(VERSION 3.25)
 
 
 set(KNP_ENABLE_COVERAGE OFF)
