Add first version of sonata loading and saving procedures

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ else()
     set(KNP_COVERAGE_DEFAULT ON)
 endif()
 
+
 if (CMAKE_SYSTEM_PROCESSOR MATCHES "(x86)|(X86)|(amd64)|(AMD64)")
     set(KNP_ENABLE_AVX_DEFAULT ON)
 else()
@@ -22,7 +23,7 @@ else()
 endif()
 
 option(KNP_BUILD_TESTS "Build tests" ON)
-option(KNP_BUILD_DOCUMENTATION "Build doxygen auto documentation" ON)
+option(KNP_BUILD_DOCUMENTATION "Build doxygen auto documentation" OFF)
 option(KNP_BUILD_EXAMPLES "Build usage examples" ON)
 option(KNP_MAINTAINER_BUILD "Build for maintainer, but not for the development purposes" OFF)
 option(KNP_ENABLE_COVERAGE "Enable coverage checking" ${KNP_COVERAGE_DEFAULT})
@@ -80,6 +81,10 @@ set(SPDLOG_BUILD_PIC ON)
 add_third_party(spdlog)
 add_third_party(pybind11)
 add_third_party(pcm)
+add_third_party(csv2)
+set(EXTLIB_FROM_SUBMODULES ON)
+set(SONATA_TESTS OFF)
+add_third_party(libsonata)
 set(FLATBUFFERS_BUILD_TESTS OFF)
 set(FLATBUFFERS_BUILD_CPP17 ON)
 add_third_party(flatbuffers)
