--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,12 @@
 [submodule "third-party/flatbuffers"]
 	path = third-party/flatbuffers
 	url = https://github.com/google/flatbuffers
+[submodule "third-party/csv2"]
+	path = third-party/csv2
+	url = https://github.com/p-ranav/csv2.git
+[submodule "third-party/json"]
+	path = third-party/json
+	url = https://github.com/nlohmann/json.git
+[submodule "third-party/simdjson"]
+	path = third-party/simdjson
+	url = https://github.com/simdjson/simdjson.git
