--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,5 +3,5 @@ cmake_minimum_required(VERSION 3.22) # TODO: increase to 3.25
 
 set(KNP_ENABLE_COVERAGE OFF)
 
-#add_subdirectory(digits-recognition)
 add_subdirectory(simple-network)
+add_subdirectory(save-load-networks)
