--- a/knp/base-framework/CMakeLists.txt
+++ b/knp/base-framework/CMakeLists.txt
@@ -24,9 +24,16 @@ knp_add_library("${PROJECT_NAME}-core"
     impl/model_executor.cpp
     impl/input_converter.cpp
     impl/output_channel.cpp
+    impl/save_network.cpp
+    impl/load_network.cpp
+    impl/csv_content.cpp
 
     ${${PROJECT_NAME}_headers})
 add_library(KNP::BaseFramework::Core ALIAS "${PROJECT_NAME}-core")
 
 target_link_libraries("${PROJECT_NAME}-core" PRIVATE spdlog::spdlog_header_only Boost::headers Boost::filesystem)
 target_link_libraries("${PROJECT_NAME}-core" PUBLIC KNP::Core KNP::Neuron::Traits KNP::Synapse::Traits)
+target_link_libraries("${PROJECT_NAME}-core" PRIVATE HighFive sonata_static)
+
+target_include_directories("${PROJECT_NAME}-core" INTERFACE HighFive/include/ ${HDF5_INCLUDE_DIRS})
+target_link_libraries("${PROJECT_NAME}-core" INTERFACE HighFive ${HDF5_C_LIBRARIES})
