--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,7 @@ add_third_party(pcm)
 add_third_party(csv2)
 set(EXTLIB_FROM_SUBMODULES ON)
 set(SONATA_TESTS OFF)
+set(SONATA_VERSION 1.0)
 add_third_party(libsonata)
 set(FLATBUFFERS_BUILD_TESTS OFF)
 set(FLATBUFFERS_BUILD_CPP17 ON)
